changes in library style

--- a/src/app/Navigation/mob-nav-bar/mob-nav-bar.component.html
+++ b/src/app/Navigation/mob-nav-bar/mob-nav-bar.component.html
@@ -35,8 +35,8 @@
                 </li>
             </ul>
             <div class="login_container">
-                <a href="javascript: void(0)" class="login" mat-dialog-close>Login</a>
-                <a href="javascript: void(0)" class="signup" mat-dialog-close>Sign Up</a>
+                <a routerLink="login" class="login" mat-dialog-close>Login</a>
+                <a routerLink="signUp" class="signup" mat-dialog-close>Sign Up</a>
             </div>
         </nav>
     </section>
