--- a/src/app/Pages/profile/profile.component.css
+++ b/src/app/Pages/profile/profile.component.css
@@ -14,9 +14,9 @@
     bottom: 10px;
     right: 0px;
   }
-  .form-container{
+  /* .form-container{
     max-width: 400px;
-  }
+  } */
   .row{
     display: flex;
     gap: 16px;
